Update INSTALL.md
Set timeout to higher value in CoreNLP.sh